opam-version: "2.0"
maintainer: "Simon Grondin"
authors: [
  "Simon Grondin"
]
synopsis: "Generate unit types for every record field"
description: """
ppx_units is a simple deriver to automatically generate single variant types from record type definitions
"""
license: "MPL 2.0"
tags: []
homepage: "https://github.com/SGrondin/ppx_units"
dev-repo: "git://github.com/SGrondin/ppx_units"
doc: "https://github.com/SGrondin/ppx_units"
bug-reports: "https://github.com/SGrondin/ppx_units/issues"
depends: [
  "ocaml" {>= "4.08.1"}
  "dune" {>= "2.0.0"}

  "ppxlib" { >= "0.14.0" }

  "alcotest" { with-test }
]
build: ["dune" "build" "-p" name "-j" jobs]
